--- a/haohope-authorizationserver-spring-boot-starter/pom.xml
+++ b/haohope-authorizationserver-spring-boot-starter/pom.xml
@@ -24,5 +24,17 @@
 			<groupId>com.github.xiongxcodes</groupId>
 			<artifactId>api-boot-starter-security-oauth-jwt</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 	</dependencies>
 </project>
