--- a/haohope-resourceserver-spring-boot-starter/pom.xml
+++ b/haohope-resourceserver-spring-boot-starter/pom.xml
@@ -41,6 +41,14 @@
 			<groupId>com.github.xiongxcodes</groupId>
 			<artifactId>api-boot-starter-security-oauth-jwt</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 		<!--MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
